@@ -1,3 +1,9 @@
+2004-06-18  Richard Hult  <richard@imendio.com>
+
+	* data/glade/task-dialog.glade:
+	* src/planner-task-dialog.c: (planner_task_dialog_new): Remove the
+	disabled option menus until we actually implement those parts.
+
 2004-06-18 Alvaro del Castillo  <acs@barrapunto.com>
 
 	* libplanner/mrp-task.c: (task_remove_subtree_cb):
